# preora

./: .gitignore  noxfile.py  pyproject.toml
doc/: doc.typ
preora/: __init__.py  preora.py  simulation.py
tests/: graph.py  test_model.py  test_net.py
