[tool.poetry]
name = "preora"
version = "0.1.0"
description = ""
authors = ["Debarchito Nath <dev.debarchito.nath@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
polars = "^0.20.17"
nox = "^2024.3.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
