[tool.poetry]
name = "preora"
version = "0.1.0"
description = ""
authors = ["Debarchito Nath <dev.debarchito.nath@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
polars = "^0.20.17"
nox = "^2024.3.2"
pytest = "^8.1.1"
nanoid = "^2.0.0"
pygraphviz = "^1.12"
pydot = "^2.0.0"
lxml = "^5.2.1"
networkx = "^3.2.1"
pyarrow = "^15.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
